// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`airtableRecordToItem A 1`] = `
{
  "barcode": "",
  "box": "box A",
  "brand": "",
  "category": "category A",
  "details": "",
  "drawer": "",
  "id": "rec123",
  "location": "location A",
  "name": "item A",
  "photo": [],
  "price": 0,
  "ref-printed": false,
  "reference": "reference-a",
  "status": "acheté",
  "updated-on": "2022-12-26T15:42:00.000Z",
}
`;

exports[`getAllItems A no offset 1`] = `
{
  "records": [
    {
      "createdTime": "",
      "fields": {
        "barcode": "",
        "box": "box A",
        "brand": "",
        "category": "category A",
        "details": "",
        "drawer": "",
        "location": "location A",
        "name": "item A",
        "ref-printed": false,
        "reference": "reference-a",
        "status": "acheté",
        "updated-on": "2022-12-26T15:42:00.000Z",
      },
      "id": "rec123",
    },
  ],
}
`;

exports[`getAllItems B with offset 1`] = `
{
  "records": [
    {
      "createdTime": "",
      "fields": {
        "barcode": "",
        "box": "box A",
        "brand": "",
        "category": "category A",
        "details": "",
        "drawer": "",
        "location": "location A",
        "name": "item A",
        "ref-printed": false,
        "reference": "reference-a",
        "status": "acheté",
        "updated-on": "2022-12-26T15:42:00.000Z",
      },
      "id": "rec123",
    },
  ],
}
`;
